# my3D

./: CMakeLists.txt  LICENSE
opengl/: deliver_gl.hpp  engine_gl.hpp  mapping_gl.hpp  mesh_gl.hpp  shader_gl.hpp
opengl/glad/include/glad/: glad.h
opengl/glad/src/: glad.c
opengl/glsl/: anim_vs  modl_fs  modl_vs
resources/objects/cube/: cube.fbx
resources/objects/sphere/: sphere.fbx
resources/terrains/boxes/: boxes.fbx
sample/: main.cpp
utility/animation/: animation.hpp  animator.hpp  keyframe.hpp
utility/model/: aabb.hpp  converter.hpp  model.hpp  octree.hpp
utility/mylog/inc/: logMessage.hpp
utility/physics/: collider.hpp  ground.hpp  soul.hpp  space.hpp
